Section 10: user authorities + assignments