@@ -1,18 +1,22 @@
 package guru.sfg.brewery.bootstrap;
 
 import guru.sfg.brewery.domain.security.Authority;
+import guru.sfg.brewery.domain.security.Role;
 import guru.sfg.brewery.domain.security.User;
 import guru.sfg.brewery.repositories.security.AuthorityRepository;
+import guru.sfg.brewery.repositories.security.RoleRepository;
 import guru.sfg.brewery.repositories.security.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.CommandLineRunner;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @RequiredArgsConstructor
 @Component
@@ -21,15 +25,16 @@ public class UserLoader implements CommandLineRunner {
 
     private final PasswordEncoder encoder;
     private final UserRepository userRepository;
+    private final RoleRepository roleRepository;
     private final AuthorityRepository authorityRepository;
 
     @Override
+    @Transactional
     public void run(String... args) throws Exception {
 
-        List<Authority> savedAuthorities = getDefaultAuthorities().stream().map(auth -> authorityRepository.findByRole(auth.getRole()).orElse(authorityRepository.save(auth))).collect(Collectors.toList());
-
-
-        getDefaultUsers(savedAuthorities).forEach(user -> userRepository.findByUsername(user.getUsername()).orElse(userRepository.save(user)));
+        if (authorityRepository.count() == 0) {
+            saveDefaultUsers();
+        }
 
         log.debug("Users loaded: {}", userRepository.findAll().size());
     }
@@ -39,33 +44,44 @@ public class UserLoader implements CommandLineRunner {
     }
 
 
-    private List<User> getDefaultUsers(List<Authority> savedAuthorities) {
+    private void saveDefaultUsers() {
 
-        Authority adminRole = savedAuthorities.stream().filter(a -> a.getRole().equals("ROLE_ADMIN")).findFirst().orElse(null);
-        Authority userRole = savedAuthorities.stream().filter(a -> a.getRole().equals("ROLE_USER")).findFirst().orElse(null);
-        Authority customerRole = savedAuthorities.stream().filter(a -> a.getRole().equals("ROLE_CUSTOMER")).findFirst().orElse(null);
+        //        beer auths
+        Authority createBeer = authorityRepository.save(Authority.builder().permission("beer.create").build());
+        Authority updateBeer = authorityRepository.save(Authority.builder().permission("beer.update").build());
+        Authority readBeer = authorityRepository.save(Authority.builder().permission("beer.read").build());
+        Authority deleteBeer = authorityRepository.save(Authority.builder().permission("beer.delete").build());
 
-        User spring = User.builder().username("spring").password(encodePassword("guru")).authority(adminRole).build();
-        User user = User.builder().username("user").password(encodePassword("password")).authority(userRole).build();
-        User scott = User.builder().username("scott").password(encodePassword("tiger")).authority(customerRole).build();
+//         customer auths
+        Authority createCustomer = authorityRepository.save(Authority.builder().permission("customer.create").build());
+        Authority updateCustomer = authorityRepository.save(Authority.builder().permission("customer.update").build());
+        Authority readCustomer = authorityRepository.save(Authority.builder().permission("customer.read").build());
+        Authority deleteCustomer = authorityRepository.save(Authority.builder().permission("customer.delete").build());
+//         brewery auths
+        Authority createBrewery = authorityRepository.save(Authority.builder().permission("brewery.create").build());
+        Authority updateBrewery = authorityRepository.save(Authority.builder().permission("brewery.update").build());
+        Authority readBrewery = authorityRepository.save(Authority.builder().permission("brewery.read").build());
+        Authority deleteBrewery = authorityRepository.save(Authority.builder().permission("brewery.delete").build());
 
-        return List.of(spring, user, scott);
+        Role adminRole = roleRepository.save(Role.builder().name("ADMIN").build());
+        Role customerRole = roleRepository.save(Role.builder().name("CUSTOMER").build());
+        Role userRole = roleRepository.save(Role.builder().name("USER").build());
+
+        adminRole.setAuthorities(new HashSet<>(Set.of(createBeer, readBeer, deleteBeer, updateBeer, createCustomer, updateCustomer, readCustomer, deleteCustomer, createBrewery, updateBrewery, readBrewery, deleteBrewery)));
+        customerRole.setAuthorities(new HashSet<>(Set.of(readBeer, readCustomer, readBrewery)));
+        userRole.setAuthorities(new HashSet<>(Set.of(readBeer)));
+
+        roleRepository.saveAll(Arrays.asList(adminRole, customerRole, userRole));
+
+        adminRole = roleRepository.findByName("ADMIN").orElseThrow();
+        customerRole = roleRepository.findByName("CUSTOMER").orElseThrow();
+        userRole = roleRepository.findByName("USER").orElseThrow();
+
+        userRepository.save(User.builder().username("spring").password(encodePassword("guru")).role(adminRole).build());
+        userRepository.save(User.builder().username("user").password(encodePassword("password")).role(userRole).build());
+        userRepository.save(User.builder().username("scott").password(encodePassword("tiger")).role(customerRole).build());
 
     }
 
-    private List<Authority> getDefaultAuthorities() {
-
-        Authority admin = Authority.builder()
-                .role("ROLE_ADMIN").build();
-
-        Authority user = Authority.builder()
-                .role("ROLE_USER").build();
-
-        Authority customer = Authority.builder()
-                .role("ROLE_CUSTOMER").build();
-
-        return List.of(admin, user, customer);
-
-    }
 
 }
